# inverse_kinematics_tester

inverse_kinematic_controller/: CMakeLists.txt  package.xml
inverse_kinematic_controller/include/inverse_kinematic_controller/: inverse_kinematic_controller.hpp
inverse_kinematic_controller/src/: inverse_kinematic_controller.cpp  inverse_kinematic_controller_parameters.yaml
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/include/inverse_kinematics/: Transformations.hpp  inverse_kinematics.hpp
inverse_kinematics/src/: Transformations.cpp  inverse_kinematics.cpp
inverse_kinematics_tester/inverse_kinematics/include/inverse_kinematics/: Transformations.hpp
inverse_kinematics_tester/inverse_kinematics/msg/: JointVelocityVector.msg
inverse_kinematics_tester/inverse_kinematics/src/: inverse_kinematics.cpp
magnecko_description/: CMakeLists.txt  package.xml
magnecko_description/config/: joystick.yaml  magnecko_controller.yaml  magnorris.rviz  magnorris_joint_trajectory_publisher.yaml  my_controllers.yaml
magnecko_description/description/: magnecko_gazebo.urdf.xacro  magnecko_matlab.urdf  robot.urdf.xacro  robot_core.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
magnecko_description/launch/: joystick.launch.py  magnecko_gazebo.launch.py  magnorris.launch.py  rsp.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py  view_robot.launch.py
magnecko_description/worlds/: empty.world  ferrous_looping.world
test_inverse_kinematics/: CMakeLists.txt  package.xml
test_inverse_kinematics/src/: tester.cpp
